--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 *.un~
 pkg/
 
+# Berkshelf
+.vagrant
+/cookbooks
+Berksfile.lock
+/berks-cookbooks
+
 # Bundler
 Gemfile.lock
 bin/*
@@ -14,8 +20,9 @@ bin/*
 # RSpec Output
 build/*
 
-# Test Kitchen tmp Dockerfiles
-Dockerfile-kitchen-*
+# Test Kitchen
+.kitchen/
+.kitchen.local.yml
 
 # IntelliJ IDEA
 .idea
